--- a/Servers/app/templates/homepage.html
+++ b/Servers/app/templates/homepage.html
@@ -38,6 +38,6 @@
     <input type="submit" value="Submit">
   </form>
 </div>
-<!-- <div class="welcome center">Welcome {{.Name}}, it is {{.Time}}</div> -->
+<div class="welcome center">Quote {{.Quote}}</div>
 </body>
 </html>
